# Sudoku

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.odt  main.cpp  sonar-project.properties  sonar.sh
.sonar/: report-task.txt
Sudoku/: Sudoku.hpp  SudokuOptions.hpp  main.cpp
cmake-modules/: CodeCoverage.cmake  CppCheck.cmake  SonarAnalysis.cmake  Valgrind.cmake
puzzles/easy/: 000.pzl.txt  133.pzl.txt  133.sol.pzl.txt  134.pzl.txt  134.sol.pzl.txt
puzzles/hard/: 241.pzl.txt  241.sol.pzl.txt  242.pzl.txt  242.sol.pzl.txt
puzzles/medium/: 209.pzl.txt  209.sol.pzl.txt  221.pzl.txt  221.sol.pzl.txt  222.pzl.txt  222.sol.pzl.txt
sudoku/: CMakeLists.txt  OptionsSolver.cpp  OptionsSolver.hpp  Sudoku.cpp  Sudoku.hpp  SudokuOptions.cpp  SudokuOptions.hpp
sudoku_tests/: CMakeLists.txt
sudoku_tests/basic_tests/: SudokuTests.cpp
sudoku_tests/tests/: CMakeLists.txt  SudokuOptionsTest.cpp  SudokuTest.cpp
